--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Detonator Explosion Framework\System\Detonator.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorBurstEmitter.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorCloudRing.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorComponent.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorFireball.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorForce.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorGlow.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorHeatwave.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorLight.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorShockwave.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorSmoke.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorSound.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorSparks.cs" />
+     <Compile Include="Assets\Detonator Explosion Framework\System\DetonatorSpray.cs" />
      <Compile Include="Assets\Holo UI for UGUI\Scripts\Demo Scripts\DeskManagement.cs" />
      <Compile Include="Assets\Holo UI for UGUI\Scripts\Effects\Gradient.cs" />
      <Compile Include="Assets\Holo UI for UGUI\Scripts\Effects\NicerOutline.cs" />
@@ -118,6 +132,7 @@
      <Compile Include="Assets\Low Poly City\Standard Assets\Vehicles\Car\Scripts\WheelEffects.cs" />
      <Compile Include="Assets\Scripts\FrameLord\PoolManager\IItem.cs" />
      <Compile Include="Assets\Scripts\FrameLord\PoolManager\ItemPoolManager.cs" />
+     <Compile Include="Assets\Scripts\FrameLord\PoolManager\ItemRecycleTime.cs" />
      <Compile Include="Assets\Scripts\FrameLord\PoolManager\PoolManager.cs" />
      <Compile Include="Assets\Scripts\FrameLord\Sound\FadeAudioSource.cs" />
      <Compile Include="Assets\Scripts\FrameLord\Sound\SMAudioSource.cs" />
@@ -178,6 +193,7 @@
      <None Include="Assets\Effects\Shaders\ExhaustFlame.shader" />
      <None Include="Assets\Low Poly City\Standard Assets\Vehicles\Car\CarGuidelines.txt" />
      <None Include="Assets\Effects\Shaders\WarpTunnel.shader" />
+     <None Include="Assets\Detonator Explosion Framework\Resources\Detonator\Textures\HeatDistort.shader" />
      <None Include="Assets\Effects\Shaders\SmokeTurbulent.shader" />
      <None Include="Assets\Effects\Shaders\Additive.shader" />
  <Reference Include="UnityEngine.UI">
